# lang-bmb

./: --emit-ir  -o  .bench-native-baseline.ndjson  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  VERSION  _err.txt  benchmark_analysis.md  benchmark_test_file.tmp  bmb_native_build.bat  build_with_llvm.sh  run_all_benchmarks.sh  rust-toolchain.toml
ecosystem/bmb-ai-bench/: README.md  pyproject.toml
ecosystem/bmb-ai-bench/bmb_ai_bench/: __init__.py  cli.py  doctor.py  list_cmd.py  registry.py  run_cmd.py  validate.py
ecosystem/bmb-ai-bench/bmb_ai_bench/analysis/: dashboard.py  report.py  stats.py
ecosystem/bmb-ai-bench/bmb_ai_bench/diagnostics/: error_normalizer.py  loop_classifier.py
ecosystem/bmb-ai-bench/bmb_ai_bench/runner/: base.py  bmb_runner.py  llm_client.py  perf.py
ecosystem/bmb-ai-bench/problems/01_binary_search/: baseline.c  metadata.json  problem.md
ecosystem/bmb-ai-bench/problems/02_quicksort/: baseline.c  metadata.json  problem.md  solution.bmb
ecosystem/bmb-ai-bench/problems/03_merge_sort/: metadata.json  problem.md  tests.json
ecosystem/bmb-ai-bench/problems/04_fibonacci/: baseline.c  metadata.json  problem.md
ecosystem/bmb-ai-bench/problems/05_gcd/: metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/06_matrix_multiply/: metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/07_max_subarray/: metadata.json  problem.md  solution.bmb  solution.rs
ecosystem/bmb-ai-bench/problems/08_two_sum/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/09_insertion_sort/: metadata.json  problem.md  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/100_verified_binary_search/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/101_fizz_buzz/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/102_palindrome_number/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/103_majority_element/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/104_single_number_xor/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/105_climbing_stairs/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/106_stock_profit/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/107_missing_number/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/108_move_zeroes/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/109_rotate_array/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/10_reverse_array/: metadata.json  problem.md  tests.json
ecosystem/bmb-ai-bench/problems/110_find_duplicate/: baseline.c  metadata.json  problem.md  solution.bmb  solution.rs  tests.json
ecosystem/bmb-ai-bench/problems/111_valid_anagram/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/112_power_of_two/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/113_count_bits/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/114_two_sum_sorted/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/115_plus_one/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/problems/116_max_product_subarray/: baseline.c  metadata.json  problem.md  solution.bmb  tests.json
ecosystem/bmb-ai-bench/protocol/: bmb_reference.md  c_reference.md  python_reference.md
ecosystem/bmb-ai-bench/results/: results-2026-05-22-full.jsonl  results-2026-05-22-pilot-bmb.jsonl  results-test-2026-05-22.jsonl  results-test-pilot.jsonl
ecosystem/bmb-ai-bench/scripts/: analyze_crosslang.py  run_crosslang.py  run_experiment.py
ecosystem/bmb-ai-bench/tests/: test_analyze.py  test_cli.py  test_dashboard.py  test_registry.py  test_run_cmd.py
ecosystem/bmb-algo/: CHANGELOG.md  README.md  pyproject.toml  setup.py
ecosystem/bmb-algo/benchmarks/: bench_algo.py
ecosystem/bmb-algo/examples/: example.c  graph_shortest_path.py  knapsack_solver.py
ecosystem/bmb-algo/include/: bmb_algo.h
ecosystem/bmb-algo/src/: lib.bmb
ecosystem/bmb-algo/tests/: conftest.py  test_bmb_algo.py
ecosystem/bmb-compute/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
ecosystem/bmb-compute/benchmarks/: bench_compute.py
ecosystem/bmb-compute/examples/: statistics.py
ecosystem/bmb-compute/include/: bmb_compute.h
ecosystem/bmb-compute/src/: lib.bmb
ecosystem/bmb-compute/tests/: conftest.py  test_bmb_compute.py
ecosystem/bmb-crypto/: CHANGELOG.md  README.md  pyproject.toml  setup.py
ecosystem/bmb-crypto/benchmarks/: bench_crypto.py
ecosystem/bmb-crypto/examples/: hash_file.py
ecosystem/bmb-crypto/include/: bmb_crypto.h
ecosystem/bmb-crypto/src/: lib.bmb
ecosystem/bmb-crypto/tests/: test_bmb_crypto.py
ecosystem/bmb-json/: CHANGELOG.md  README.md  pyproject.toml  setup.py
ecosystem/bmb-json/benchmarks/: bench_json.py
ecosystem/bmb-json/examples/: json_parse.py
ecosystem/bmb-json/include/: bmb_json.h
ecosystem/bmb-json/src/: lib.bmb
ecosystem/bmb-json/tests/: conftest.py  test_bmb_json.py
ecosystem/bmb-text/: CHANGELOG.md  README.md  pyproject.toml  setup.py
ecosystem/bmb-text/benchmarks/: bench_text.py
ecosystem/bmb-text/examples/: text_analysis.py
ecosystem/bmb-text/include/: bmb_text.h
ecosystem/bmb-text/src/: lib.bmb
ecosystem/bmb-text/tests/: conftest.py  test_bmb_text.py
ecosystem/bmb-wasm/: Cargo.toml
ecosystem/bmb-wasm/src/: lib.rs
(+7590 files in other folders)
