[project]
name = "bmb-ai-bench"
version = "2.0.0"
description = "BMB AI-Friendly Benchmark Suite — 100 problems, multi-LLM, reproducible"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["httpx>=0.25"]
stats = ["scipy>=1.11"]
dev = ["pytest>=7.4"]

[project.scripts]
bmb-ai-bench = "bmb_ai_bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
