[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmb-algo"
version = "0.2.0"
description = "Blazing fast algorithms powered by BMB — 90x faster than Python on knapsack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "iyulab", email = "iyulab@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
"Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]
keywords = ["algorithm", "knapsack", "lcs", "dijkstra", "floyd", "sort", "search", "bmb", "performance"]

[project.urls]
Homepage = "https://github.com/iyulab/lang-bmb"
Repository = "https://github.com/iyulab/lang-bmb"
Documentation = "https://github.com/iyulab/lang-bmb/tree/main/ecosystem/bmb-algo"

[tool.setuptools]
packages = ["bmb_algo"]

[tool.setuptools.package-dir]
bmb_algo = "bindings/python"

[tool.setuptools.package-data]
bmb_algo = ["*.dll", "*.so", "*.dylib"]
