[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmb-crypto"
version = "0.2.0"
description = "Fast cryptographic functions (SHA-256, MD5, HMAC, Base64/32, CRC32) powered by BMB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "iyulab", email = "iyulab@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
"Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
keywords = ["sha256", "md5", "hmac", "base64", "base32", "crc32", "cryptography", "bmb", "performance"]

[project.urls]
Homepage = "https://github.com/iyulab/lang-bmb"
Repository = "https://github.com/iyulab/lang-bmb"
Documentation = "https://github.com/iyulab/lang-bmb/tree/main/ecosystem/bmb-crypto"

[tool.setuptools]
packages = ["bmb_crypto"]

[tool.setuptools.package-dir]
bmb_crypto = "bindings/python"

[tool.setuptools.package-data]
bmb_crypto = ["*.dll", "*.so", "*.dylib"]
