[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmb-text"
version = "0.1.0"
description = "Fast string search, matching, and analysis powered by BMB — KMP, find, replace, case conversion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "iyulab", email = "iyulab@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
"Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries",
]
keywords = ["string", "search", "kmp", "text", "palindrome", "tokenizer", "bmb", "performance"]

[project.urls]
Homepage = "https://github.com/iyulab/lang-bmb"
Repository = "https://github.com/iyulab/lang-bmb"
Documentation = "https://github.com/iyulab/lang-bmb/tree/main/ecosystem/bmb-text"

[tool.setuptools]
packages = ["bmb_text"]

[tool.setuptools.package-dir]
bmb_text = "bindings/python"

[tool.setuptools.package-data]
bmb_text = ["*.dll", "*.so", "*.dylib"]
